Code cleanup (#232)